--- a/src/features/Job/JobList/styles.css
+++ b/src/features/Job/JobList/styles.css
@@ -13,3 +13,13 @@ a[disabled] {
 .btn_view:hover {
   background-color: #5bbd2b;
 }
+
+.error-message {
+  width: 100%;
+  display: inline-block;
+  padding: 5px;
+  background: red;
+  color: #fff;
+  text-align: center;
+  margin: 0.5rem 0;
+}
