--- a/src/features/Form/FormCV/styles.scss
+++ b/src/features/Form/FormCV/styles.scss
@@ -1,133 +1,133 @@
-$base-color: #e67e22;
-$blue-color: #22ac11;
+// // $base-color: #e67e22;
+// // $blue-color: #22ac11;
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+// }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: $base-color;
-}
+// body {
+//   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+//   color: $base-color;
+// }
 
-h1 {
-  text-align: center;
-  margin-top: 1rem;
-  font-size: 2.2rem;
-}
+// h1 {
+//   text-align: center;
+//   margin-top: 1rem;
+//   font-size: 2.2rem;
+// }
 
-.steps {
-  display: flex;
-  justify-content: center;
-  letter-spacing: 1px;
-  margin-top: 2rem;
+// .steps {
+//   display: flex;
+//   justify-content: center;
+//   letter-spacing: 1px;
+//   margin-top: 2rem;
 
-  .step {
-    margin: 0.5rem 3rem;
-    display: flex;
-    color: #ccc;
+//   .step {
+//     margin: 0.5rem 3rem;
+//     display: flex;
+//     color: #ccc;
 
-    a {
-      color: $base-color;
-    }
+//     a {
+//       color: $base-color;
+//     }
 
-    div:first-of-type {
-      border: 1px solid #ccc;
-      padding: 5px;
-      border-radius: 50%;
-      margin-right: 0.5rem;
-      width: 2rem;
-      height: 2rem;
-      text-align: center;
-      line-height: 100%;
-      padding-top: 7%;
-    }
+//     div:first-of-type {
+//       border: 1px solid #ccc;
+//       padding: 5px;
+//       border-radius: 50%;
+//       margin-right: 0.5rem;
+//       width: 2rem;
+//       height: 2rem;
+//       text-align: center;
+//       line-height: 100%;
+//       padding-top: 7%;
+//     }
 
-    :last-child {
-      margin-top: 3%;
-    }
+//     :last-child {
+//       margin-top: 3%;
+//     }
 
-    &.active {
-      div:first-of-type {
-        background-color: $base-color;
-        border: 1px solid transparent;
-        color: #fff;
-      }
+//     &.active {
+//       div:first-of-type {
+//         background-color: $base-color;
+//         border: 1px solid transparent;
+//         color: #fff;
+//       }
 
-      div:last-of-type {
-        color: $base-color;
-      }
-    }
-  }
-}
+//       div:last-of-type {
+//         color: $base-color;
+//       }
+//     }
+//   }
+// }
 
-.errorMsg {
-  max-width: 350px;
-  color: #f21e08;
-  padding: 2px 0;
-  margin-top: 2px;
-  font-size: 14px;
-  font-weight: 300;
-}
+// .errorMsg {
+//   max-width: 350px;
+//   color: #f21e08;
+//   padding: 2px 0;
+//   margin-top: 2px;
+//   font-size: 14px;
+//   font-weight: 300;
+// }
 
-.login-error {
-  font-size: 1.1rem;
-}
+// .login-error {
+//   font-size: 1.1rem;
+// }
 
-.successMsg {
-  color: $blue-color;
-}
+// .successMsg {
+//   color: $blue-color;
+// }
 
-.loading {
-  color: #777;
-}
+// .loading {
+//   color: #777;
+// }
 
-.form-control.input-error {
-  border: 2px solid #f21e08;
-}
+// .form-control.input-error {
+//   border: 2px solid #f21e08;
+// }
 
-.user-details {
-  color: $blue-color;
-  padding: 5px 0;
-  margin-bottom: 1rem;
-}
+// .user-details {
+//   color: $blue-color;
+//   padding: 5px 0;
+//   margin-bottom: 1rem;
+// }
 
-@media screen and (max-width: 1200px) {
-  .input-form {
-    width: 90%;
-  }
-}
+// @media screen and (max-width: 1200px) {
+//   .input-form {
+//     width: 90%;
+//   }
+// }
 
-@media screen and (max-width: 900px) {
-  .steps .step {
-    margin: 0.5rem 2rem;
-  }
-}
+// @media screen and (max-width: 900px) {
+//   .steps .step {
+//     margin: 0.5rem 2rem;
+//   }
+// }
 
-@media screen and (max-width: 600px) {
-  h1 {
-    font-size: 2rem;
-  }
+// @media screen and (max-width: 600px) {
+//   h1 {
+//     font-size: 2rem;
+//   }
 
-  .steps .step {
-    margin: 0.5rem 1rem;
-    font-size: 0.9rem;
+//   .steps .step {
+//     margin: 0.5rem 1rem;
+//     font-size: 0.9rem;
 
-    div:first-of-type {
-      padding-top: 9%;
-    }
-  }
-}
+//     div:first-of-type {
+//       padding-top: 9%;
+//     }
+//   }
+// }
 
-@media screen and (max-width: 400px) {
-  .steps {
-    flex-direction: column;
-    align-items: center;
+// @media screen and (max-width: 400px) {
+//   .steps {
+//     flex-direction: column;
+//     align-items: center;
 
-    .step {
-      align-items: center;
-    }
-  }
-}
+//     .step {
+//       align-items: center;
+//     }
+//   }
+// }
