--- a/src/features/Loading/styles.css
+++ b/src/features/Loading/styles.css
@@ -1,25 +1,16 @@
-.load-page {
-  background: #fff;
-  overflow: hidden;
-}
-.loader {
-  width: 300px;
-  height: 300px;
-  margin: auto;
-}
-.loader div {
-  width: calc(100% - 15px);
-  height: calc(100% - 15px);
-  border: 2px solid #fff;
-  border-top: 2px solid crimson;
+.spinner-3 {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  animation: rotate 10s linear infinite alternate-reverse;
+  background: conic-gradient(#0000 10%, #25b09b);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: s3 1s infinite linear;
+  margin-left: 30%;
+  margin-top: 30%;
 }
-@keyframes rotate {
-  50% {
-    transform: rotate(80deg);
-  }
-  100% {
-    transform: rotate(360deg);
+@keyframes s3 {
+  to {
+    transform: rotate(1turn);
   }
 }
