--- a/src/features/Form/FormCvs/styles.scss
+++ b/src/features/Form/FormCvs/styles.scss
@@ -1,14 +1,19 @@
 $base-color: #22ac11;
 $blue-color: #22ac11;
 
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: $base-color;
+}
+
 .steps {
   display: flex;
   justify-content: center;
   letter-spacing: 1px;
-  margin-top: 3rem;
+  margin-top: 5rem;
 
   .step {
-    margin: 0.5rem 300rem;
+    margin: 0.5rem 3rem;
     display: flex;
     color: #ccc;
 
@@ -29,13 +34,13 @@ $blue-color: #22ac11;
     }
 
     :last-child {
-      margin-top: 1%;
+      margin-top: 3%;
     }
 
     &.active {
       div:first-of-type {
         background-color: $base-color;
-        border: 5px solid transparent;
+        border: 1px solid transparent;
         color: #fff;
       }
 
@@ -55,16 +60,14 @@ $blue-color: #22ac11;
   font-weight: 300;
 }
 
-.login-error {
-  font-size: 1.1rem;
-}
-
 .successMsg {
   color: $blue-color;
 }
 
-.form-control.input-error {
-  border: 2px solid #f21e08;
+@media screen and (max-width: 1200px) {
+  .input-form {
+    width: 90%;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -75,7 +78,7 @@ $blue-color: #22ac11;
 
 @media screen and (max-width: 600px) {
   h1 {
-    font-size: 10rem;
+    font-size: 2rem;
   }
 
   .steps .step {
