--- a/src/features/Form/FormCvs/styles.scss
+++ b/src/features/Form/FormCvs/styles.scss
@@ -1,9 +1,5 @@
-$base-color: #22ac11;
-$blue-color: #22ac11;
-
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: $base-color;
 }
 
 .steps {
@@ -18,7 +14,7 @@ body {
     color: #ccc;
 
     a {
-      color: $base-color;
+      color: #5bbd2b;
     }
 
     div:first-of-type {
@@ -39,13 +35,13 @@ body {
 
     &.active {
       div:first-of-type {
-        background-color: $base-color;
+        background-color: #5bbd2b;
         border: 2px solid transparent;
         color: #fff;
       }
 
       div:last-of-type {
-        color: $base-color;
+        color: #5bbd2b;
       }
     }
   }
@@ -61,7 +57,7 @@ body {
 }
 
 .successMsg {
-  color: $blue-color;
+  color: #5bbd2b;
 }
 
 @media screen and (max-width: 1200px) {
